--- a/basicpython/mariadbpython.ipynb
+++ b/basicpython/mariadbpython.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,13 @@
     "\n",
     "#import connectmariadb\n",
     "from module import connectmariadb as con\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 2: Create table "
    ]
   },
   {
@@ -53,6 +60,90 @@
     "        print(pymysql.error)\n",
     "\n",
     "create_table()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3: Insert Data to Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Insert person successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_persion(name = \"\", address=\"\"):\n",
+    "    connection = con.connectdb()\n",
+    "    cursor = connection.cursor()\n",
+    "\n",
+    "    #Insert data\n",
+    "    sql = f\"INSERT INTO person(name, address) VALUES('{name}','{address}') \"\n",
+    "    try:\n",
+    "        cursor.execute(sql)\n",
+    "        connection.commit()\n",
+    "        print(\"Insert person successfully\")\n",
+    "    except pymysql.error:\n",
+    "        print(pymysql.error)\n",
+    "add_persion(\"sonevilay1\",\"vientiane\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 4: Read Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID=  8\n",
+      "Name=  sonevilay\n",
+      "Address=  vientiane\n",
+      "-------------------\n",
+      "ID=  3\n",
+      "Name=  sonevilay\n",
+      "Address=  vientiane\n",
+      "-------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "def read_persion():\n",
+    "    connection = con.connectdb()\n",
+    "    cursor = connection.cursor()\n",
+    "\n",
+    "    #Insert data\n",
+    "    sql = f\"SELECT * FROM person ORDER BY id DESC\"\n",
+    "    try:\n",
+    "        cursor.execute(sql)\n",
+    "        connection.commit()\n",
+    "        # loop read data\n",
+    "        for row in cursor:\n",
+    "            print(\"ID= \", row['id']);\n",
+    "            print(\"Name= \", row['name']);\n",
+    "            print(\"Address= \", row['address']);\n",
+    "            print(\"-------------------\")\n",
+    "    except pymysql.error:\n",
+    "        print(pymysql.error)\n",
+    "read_persion()"
    ]
   }
  ],
