--- a/basicpython/mariadbpython.ipynb
+++ b/basicpython/mariadbpython.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
     "        print(\"Insert person successfully\")\n",
     "    except pymysql.error:\n",
     "        print(pymysql.error)\n",
-    "add_persion(\"sonevilay1\",\"vientiane\")"
+    "add_persion(\"sonevilay\",\"vientiane\")"
    ]
   },
   {
@@ -107,19 +107,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ID=  8\n",
-      "Name=  sonevilay\n",
-      "Address=  vientiane\n",
-      "-------------------\n",
-      "ID=  3\n",
-      "Name=  sonevilay\n",
+      "ID=  1\n",
+      "Name=  sonevilay1\n",
       "Address=  vientiane\n",
       "-------------------\n"
      ]
