--- a/logisticRegressionLab/customer_purcheased.ipynb
+++ b/logisticRegressionLab/customer_purcheased.ipynb
@@ -16,7 +16,8 @@
     "import pandas as pd\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, recall_score, f1_score"
    ]
   },
   {
@@ -416,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +886,7 @@
      "output_type": "stream",
      "text": [
       "[[0, 49, 36000]]\n",
-      "[[6.59194921e-17 4.90000000e+01 3.60000000e+04]]\n"
+      "[[-0.97530483  1.04805336 -0.98296806]]\n"
      ]
     }
    ],
@@ -913,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -936,6 +937,46 @@
     "print(\"Prediction\")\n",
     "p = 'Not Purchase' if y_pred[0] == 0 else 'Purchase'\n",
     "print(f'gender: {gender}, age: {age}, salary: {salary} ==>', p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Step 10: Model Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix: [[56  2]\n",
+      " [ 5 17]]\n",
+      "Accuracy Score:  0.9125\n",
+      "Precision Score: 0.8947368421052632\n",
+      "Recall Score: 0.7727272727272727\n",
+      "f1 Score: 0.8292682926829269\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_test = model.predict(x_test)\n",
+    "\n",
+    "print(\"Confusion Matrix:\", confusion_matrix(y_test, y_pred_test))\n",
+    "\n",
+    "print(\"Accuracy Score: \", accuracy_score(y_test, y_pred_test))\n",
+    "\n",
+    "print(\"Precision Score:\", precision_score(y_test, y_pred_test))\n",
+    "\n",
+    "print(\"Recall Score:\", recall_score(y_test, y_pred_test))\n",
+    "\n",
+    "print(\"f1 Score:\", f1_score(y_test, y_pred_test))\n",
+    "\n"
    ]
   }
  ],
